--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -8,6 +8,8 @@
 }
 *, *::before , *::after{
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 body{
     padding: 0;
@@ -18,10 +20,11 @@ body{
 }
 nav{
     margin: 0 40px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    max-height: 100px;
 }
 nav div.NavBar li{
     list-style: none;
@@ -34,21 +37,60 @@ nav div.NavBar a{
     color:var(--mainColor);
     /* removed the link underline */
 }
-nav input{
-    width: 15%;
-    height: 30px;
-    border-radius: 10px;
+nav img{
+    width: 100%;
+    max-width: 150px;
+}
+
+nav .searchInput{  /* this is the container where to put the search bar and search image */
+    width: 100%;
+    max-width: 330px;
+    max-height: 50px;
     color: var(--mainColor);
-    background-color: #DFDFDF;
+    background-color: rgba(0, 0, 0, 0.1);
     border: 0px;
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    padding: 10px;
+    color: var(--mainColor);
+}
+nav .searchInput input{
+    background: transparent;
+    flex: 1; /* makes it take the full width of the .searchInput container */
+    outline: none;
+    border: 0;
+    font-size: 1.3rem;
+    color: var(--mainColor);
+    padding-left:10px;
 }
 nav input::placeholder{
     color: var(--mainColor);
-    font-size: 1rem;
+    font-size: 1.3rem;
     padding-left: 5px;
+    opacity: 0.5;
+    
+
 }
 nav input::active{
     border: none;
 }
-
-
+nav .searchInput button img{
+    width: 40px;
+    border-radius: 40px;
+}
+nav .searchInput button{
+    border: 0;
+    border-radius: 50%;
+    background: none;
+    
+}
+nav .searchInput button img:hover{
+    filter: brightness(.8);
+    background-color: rgba(0, 0, 0, 0.1);
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration{ display: none; } 
+/* Removes the X from the search bar */
