--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -29,8 +29,12 @@ nav{
 nav div.NavBar li{
     list-style: none;
     display: inline;
-    margin: 0 15px;
+    margin: 0 20px;
     font-size: 1.5rem;
+    transition: .2s ease-in-out;
+}
+nav div.NavBar li:hover{
+    font-size: 1.8rem;
 }
 nav div.NavBar a{
     text-decoration: none; 
@@ -78,6 +82,7 @@ nav input::active{
 nav .searchInput button img{
     width: 40px;
     border-radius: 40px;
+    transition: .2s ease-in-out;
 }
 nav .searchInput button{
     border: 0;
@@ -88,6 +93,7 @@ nav .searchInput button{
 nav .searchInput button img:hover{
     filter: brightness(.8);
     background-color: rgba(0, 0, 0, 0.1);
+
 }
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
