--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,5 +1,6 @@
 :root {
     --mainColor: #00A0AE;
+    --textcolor:  #fff;
     --secColor: #E2C693;
     --footerdesColor: #343434;
     --black: #000000;
@@ -14,7 +15,7 @@ body{
     margin: 0;
     font-family: 'Kanit', sans-serif;
     color: white;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 nav{
     margin: 0 40px;
@@ -50,5 +51,74 @@ nav input::placeholder{
 nav input::active{
     border: none;
 }
+ section .image img{
+    margin: -10px 0px;
+    padding: 0;
+    background-repeat: no-repeat; 
+     background-size: contain;
+     width: 100%;
+     height: 100vh;
+     object-fit: cover;
+     z-index: 1;
+ }
+   
+section .welcom p{
+    color: var(--textcolor);
+    z-index: 2;
+    font-family: 'Cairo', sans-serif;
+    font-family: 'Jomhuria', serif;
+    font-family: 'Kalam', cursive;
+    font-size: 3.5rem;
+    width: 450px;
+    padding-top: 15px;
+    border-top-left-radius: 70px;
+    border-bottom-right-radius: 70px;
+    border : 10px inset  #fff;
+    position: absolute;
+    top: 10%;
+    left: 3%;
+    height: 200px;
+    text-align: center;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
+    background-color: rgb(0 0 0/0.2);
+    font-weight: bold;
 
-
+}
+section .pargraph p{
+    color:var(--textcolor);
+    width: 100%;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
+    background-color: rgb(0 0 0/0.2);
+    position: absolute;
+    top:80%;
+    width: 100%;
+    padding: 15px 30px;
+    height: 196px;
+    font-size: 1.2rem;
+}
+section .pargraph  input{
+    color: var(--textcolor);
+     background-color:rgb(68 154 233);
+    border: none;
+    text-align: center;
+    padding: 10px;
+    width:97px;
+    position: absolute;
+    top: 107%;
+    left: 2%;
+}
+section .pargraph  input:hover{
+    background-color: rgb(23, 23, 238);
+    
+}
+   
