--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -3,6 +3,7 @@
     --secColor: #E2C693;
     --footerdesColor: #343434;
     --black: #000000;
+    --mainFont: font-family: 'Kanit', sans-serif;;
     --welcomeFont: font-family: 'Kaushan Script', cursive;
 
 }
@@ -16,7 +17,7 @@ body{
     margin: 0;
     font-family: 'Kanit', sans-serif;
     color: white;
-    overflow: hidden;
+
 }
 nav{
     margin: 0 40px;
@@ -25,16 +26,18 @@ nav{
     justify-content: space-between;
     align-items: center;
     max-height: 100px;
+    padding-bottom: 10px;
+    z-index: 1;
 }
 nav div.NavBar li{
     list-style: none;
     display: inline;
-    margin: 0 20px;
+    margin: 0 25px;
     font-size: 1.5rem;
-    transition: .2s ease-in-out;
+    transition: .2s ease-in;
 }
 nav div.NavBar li:hover{
-    font-size: 1.8rem;
+    border-bottom: 5px solid var(--secColor);
 }
 nav div.NavBar a{
     text-decoration: none; 
