--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -4,7 +4,7 @@
     --secColor: #E2C693;
     --footerdesColor: #343434;
     --black: #000000;
-    --welcomeFont: font-family: 'Kaushan Script', cursive;
+    --welcomeFont: 'Kaushan Script', cursive;
 
 }
 *, *::before , *::after{
@@ -15,7 +15,6 @@ body{
     margin: 0;
     font-family: 'Kanit', sans-serif;
     color: white;
-    /* overflow: hidden; */
 }
 nav{
     margin: 0 40px;
