--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -95,139 +95,6 @@ nav input::active {
     border: none;
 }
 
-/* Footer Code */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-footer {
-    margin: 10px 0 0 0;
-    background-color: #E2C693;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    padding: 40px 0;
-    color: var(--mainColor);
-
-}
-
-h4 {
-    color: #000000;
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: var(--mainColor);
-}
-
-
-li {
-    line-height: 0.60cm;
-}
-
-.copy {
-    width: 100%;
-    text-align: center;
-    padding-top: 10px;
-    color: #000000;
-}
-
-.comp1 {
-    line-height: 0.60cm;
-}
-
-.comp2 ul li {
-    margin-bottom: 5px;
-}
-
-.comp3 ul li {
-    margin-bottom: 7px;
-}
-
-.social ul li {
-    display: inline-block;
-    margin-bottom: 20px;
-}
-
-section .image img {
-    margin: -10px 0px;
-    padding: 0;
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    z-index: 1;
-}
-
-section .welcom p {
-    color: var(--textcolor);
-    z-index: 2;
-    font-family: 'Cairo', sans-serif;
-    font-family: 'Jomhuria', serif;
-    font-family: 'Kalam', cursive;
-    font-size: 3.5rem;
-    width: 450px;
-    padding-top: 15px;
-    border-top-left-radius: 70px;
-    border-bottom-right-radius: 70px;
-    border: 10px inset #fff;
-    position: absolute;
-    top: 10%;
-    left: 3%;
-    height: 200px;
-    text-align: center;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
-    background-color: rgb(0 0 0/0.2);
-    font-weight: bold;
-
-}
-
-section .pargraph p {
-    color: var(--textcolor);
-    width: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
-    background-color: rgb(0 0 0/0.2);
-    position: absolute;
-    top: 80%;
-    width: 100%;
-    padding: 15px 30px;
-    height: 196px;
-    font-size: 1.2rem;
-}
-
-section .pargraph input {
-    color: var(--textcolor);
-    background-color: rgb(68 154 233);
-    border: none;
-    text-align: center;
-    padding: 10px;
-    width: 97px;
-    position: absolute;
-    top: 107%;
-    left: 2%;
-}
-
-section .pargraph input:hover {
-    background-color: rgb(23, 23, 238);
-
-}
-
 
 nav .searchInput button img {
     width: 40px;
@@ -259,7 +126,89 @@ input[type="search"]::-webkit-search-results-decoration {
 
 
 
-/*section*/
+
+
+
+
+/*main image*/
+
+section .image img {
+    margin: -10px 0px;
+    padding: 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    z-index: 1;
+}
+
+section .welcome p {
+    color: var(--textcolor);
+    z-index: 2;
+    font-family: 'Cairo', sans-serif;
+    font-family: 'Jomhuria', serif;
+    font-family: 'Kalam', cursive;
+    font-size: 3.5rem;
+    width: 450px;
+    padding-top: 15px;
+    border-top-left-radius: 70px;
+    border-bottom-right-radius: 70px;
+    border: 10px inset #fff;
+    position: absolute;
+    top: 10%;
+    left: 3%;
+    height: 200px;
+    text-align: center;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
+    background-color: rgb(0 0 0/0.2);
+    font-weight: bold;
+
+}
+
+section .paragraph p {
+    color: var(--textcolor);
+    width: 100%;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
+    background-color: rgb(0 0 0/0.2);
+    position: absolute;
+    top: 80%;
+    width: 100%;
+    padding: 15px 30px;
+    height: 196px;
+    font-size: 1.2rem;
+}
+
+section .paragraph input {
+    color: var(--textcolor);
+    background-color: rgb(68 154 233);
+    border: none;
+    text-align: center;
+    padding: 10px;
+    width: 97px;
+    position: absolute;
+    top: 107%;
+    left: 2%;
+}
+
+section .paragraph input:hover {
+    background-color: rgb(23, 23, 238);
+
+}
+
+
+
+/*body section*/
 section {
     width: 100%;
     height: 150vh;
@@ -397,4 +346,67 @@ section .button-container button:hover {
 section .button-container button:active {
     transform: scale(.96);
 
+}
+
+
+
+
+
+/* Footer Code */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    margin: 10px 0 0 0;
+    background-color: #E2C693;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 40px 0;
+    color: var(--mainColor);
+
+}
+
+h4 {
+    color: #000000;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: var(--mainColor);
+}
+
+
+li {
+    line-height: 0.60cm;
+}
+
+.copy {
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    color: #000000;
+}
+
+.comp1 {
+    line-height: 0.60cm;
+}
+
+.comp2 ul li {
+    margin-bottom: 5px;
+}
+
+.comp3 ul li {
+    margin-bottom: 7px;
+}
+
+.social ul li {
+    display: inline-block;
+    margin-bottom: 20px;
 }
