--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -19,15 +19,33 @@ body{
     color: white;
 
 }
+/* nav::before{
+    content: "";
+    background-color: white;
+    opacity: .9;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 15px;
+    
+} */
 nav{
-    margin: 0 40px;
-    margin-top: 10px;
+    padding: 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-height: 100px;
+    height: 80px;
     padding-bottom: 10px;
-    z-index: 1;
+    position: absolute;
+    z-index: 1000;
+    background-color: white;
+    width: 100%;
+    border-bottom: 3px solid var(--mainColor) ;
+    /* margin-left: 7.5%; */
+    
 }
 nav div.NavBar li{
     list-style: none;
@@ -45,8 +63,8 @@ nav div.NavBar a{
     /* removed the link underline */
 }
 nav img{
-    max-width: 120px;
-    margin: 6px;
+    width: 100%;
+    max-width: 80px;
 }
 
 nav .searchInput{  /* this is the container where to put the search bar and search image */
@@ -96,6 +114,8 @@ nav .searchInput button{
 nav .searchInput button img:hover{
     filter: brightness(.8);
     background-color: rgba(0, 0, 0, 0.1);
+    cursor:pointer;
+
 
 }
 input[type="search"]::-webkit-search-decoration,
@@ -103,3 +123,274 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration{ display: none; } 
 /* Removes the X from the search bar */
+
+
+div.mainContainer{
+    position: relative;
+    z-index: 2;
+    background-image: url("../images/Main.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+#welcome ,#etours{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 4rem;
+}
+
+div.mainContainer .blurDiv1{
+    position: relative;
+    top: 20%;
+    width: 500px;
+    text-align: center;
+    font-size: 2.5rem;
+    background-color:rgba(0, 0, 0, 0.3);
+    backdrop-filter:blur(10px) ;
+}
+div.mainContainer .blurDiv2{
+    position: absolute; 
+    bottom: 0;
+    width: 100%;
+    text-align: left;
+    font-size: 1.2rem;
+    background-color:rgba(0, 0, 0, 0.3);
+    backdrop-filter:blur(10px) ;
+    padding: 30px 70px;
+    display: block;
+}
+div.mainContainer .blurDiv2 button{
+    padding: 15px 30px;
+    font-size: 1.5rem;
+    font-family: var(--mainFont);
+    margin-top: 15px;
+    border: none;
+    color: white;
+    background-color: var(--mainColor);
+    transition: .2s ease-in-out;
+
+
+}
+div.mainContainer .blurDiv2 button:hover{
+    cursor:pointer;
+    filter: brightness(1.1);
+}
+
+
+/* khaled css part */
+section{
+    width: 100%;
+    height: 175vh;
+    /* edit */
+    position: relative;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+}
+
+.sectionContainer{ 
+    padding: 50px 0px;
+}
+/* add */
+
+section::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -3000;
+    background-image: url("../images/E-tours\ Pattern.png");
+    background-size:cover;
+    background-repeat: repeat-y;
+    opacity: .08;
+}
+
+/*box*/
+section .box {
+    margin: 0 auto 4em auto;
+    width: 85%;
+    height: calc((150vh / 3) - 4em);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+
+section .box:nth-child(2){
+    flex-direction: row-reverse;
+
+}
+
+/*info box*/
+section .box .info{
+    max-width: 40%; 
+    /* edit */
+}
+
+section .box .info h2{
+    color: var(--secColor);
+    font-size: 3rem;
+    /* edit */
+
+}
+
+
+section .box .info p{
+    color: var(--mainColor);
+    font-size: 1.5rem;
+    /* edit */
+}
+
+
+/*image container*/
+section .box .image-container{
+    width: 40%;
+    background-color: #EEEE;
+    position: relative;
+}
+
+
+section .box .image-container img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 200;
+}
+
+
+/*before and after*/
+section .box .image-container::before{
+    content: "";
+    background-color: var(--mainColor);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    z-index: 101;
+}
+
+
+section .box .image-container::after{
+    content: "";
+    background-color: var(--secColor);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: -15px;
+    top: -15px;
+    z-index: 100;
+}
+
+
+/*button*/
+section .button-container{
+    width: 100%;
+    height: 60px;
+    /* edit */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+section .button-container::after{
+    content: '';
+    background-color: var(--secColor);
+    width: calc(10% + 40px);
+    height: 60%;
+    position: absolute;
+    left: calc(45% - 20px);
+    bottom: calc(50% -20px);
+    z-index: -1;
+}
+
+section .button-container button{
+    width: 10%;
+    font-size: 25px;
+    padding: 15px;
+    color: white;
+    background-color: var(--mainColor);
+    border: none;
+    transition: .2s;
+}
+
+section .button-container button:hover{
+    cursor:pointer;
+    transform: scale(1.1);
+    filter: brightness(1.09);
+    /* edit */
+}
+
+/* Toaa */
+
+section .button-container button:active{
+    transform: scale(.96);
+
+}
+footer{
+    margin: 10px 0 0 0;
+    background-color: #E2C693;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 40px 0;
+    color: rgb(39, 39, 39);
+    
+
+}
+footer h4{
+    color: #000000;
+    font-size: 1.5rem;
+}
+footer ul{
+    list-style: none;
+    
+}
+footer a{
+    text-decoration: none;
+    color: rgb(39, 39, 39);
+}
+
+footer li{
+    line-height: 0.60cm;
+    font-size: 1.2rem;
+    transition: .2s 
+}
+footer li img{
+    transition: .2s;
+}
+footer li img:hover{
+    filter: drop-shadow(2px 2px 2px);
+}
+.copy{
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    color: #000000;
+    margin-bottom: 4px;
+}
+footer .comp1{
+    line-height: .8cm;
+    font-size: 1.2rem;
+}
+footer .comp2 ul li{
+    margin-bottom: 5px;
+    transition: .2s;
+}
+footer .comp2 ul li a:hover{
+    color: #000000;
+}
+
+footer .comp3 ul li{
+    margin-bottom: 7px;
+}
+footer .social ul li{
+   display: inline-block;
+   margin-bottom: 20px;
+}
+
+
+
