--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -1,63 +1,73 @@
 :root {
     --mainColor: #00A0AE;
-    --textcolor: #fff;
     --secColor: #E2C693;
     --footerdesColor: #343434;
     --black: #000000;
-    --welcomeFont: 'Kaushan Script', cursive;
-
+    --mainFont: font-family: 'Kanit', sans-serif;;
+    --welcomeFont: font-family: 'Kaushan Script', cursive;
 
 }
-
-*, *::before, *::after {
+*, *::before , *::after{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
-body {
+body{
     padding: 0;
     margin: 0;
     font-family: 'Kanit', sans-serif;
     color: white;
-}
 
-nav {
-    margin: 0 40px;
-    margin-top: 10px;
+}
+/* nav::before{
+    content: "";
+    background-color: white;
+    opacity: .9;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 15px;
+    
+} */
+nav{
+    padding: 0 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-height: 100px;
+    height: 80px;
     padding-bottom: 10px;
-    z-index: 1;
+    position: absolute;
+    z-index: 1000;
+    background-color: white;
+    width: 100%;
+    border-bottom: 3px solid var(--mainColor) ;
+    /* margin-left: 7.5%; */
+    
 }
-
-nav div.NavBar li {
+nav div.NavBar li{
     list-style: none;
     display: inline;
     margin: 0 25px;
     font-size: 1.5rem;
     transition: .2s ease-in;
 }
-
-nav div.NavBar li:hover {
+nav div.NavBar li:hover{
     border-bottom: 5px solid var(--secColor);
 }
-
-nav div.NavBar a {
-    text-decoration: none;
-    color: var(--mainColor);
+nav div.NavBar a{
+    text-decoration: none; 
+    color:var(--mainColor);
     /* removed the link underline */
 }
-
-nav img {
-    max-width: 120px;
-    margin: 6px;
+nav img{
+    width: 100%;
+    max-width: 80px;
 }
 
-nav .searchInput {
-    /* this is the container where to put the search bar and search image */
+nav .searchInput{  /* this is the container where to put the search bar and search image */
     width: 100%;
     max-width: 330px;
     max-height: 50px;
@@ -70,156 +80,120 @@ nav .searchInput {
     padding: 10px;
     color: var(--mainColor);
 }
-
-nav .searchInput input {
+nav .searchInput input{
     background: transparent;
-    flex: 1;
-    /* makes it take the full width of the .searchInput container */
+    flex: 1; /* makes it take the full width of the .searchInput container */
     outline: none;
     border: 0;
     font-size: 1.3rem;
     color: var(--mainColor);
-    padding-left: 10px;
+    padding-left:10px;
 }
-
-nav input::placeholder {
+nav input::placeholder{
     color: var(--mainColor);
     font-size: 1.3rem;
     padding-left: 5px;
     opacity: 0.5;
-
+    
 
 }
-
-nav input::active {
+nav input::active{
     border: none;
 }
-
-
-nav .searchInput button img {
+nav .searchInput button img{
     width: 40px;
     border-radius: 40px;
     transition: .2s ease-in-out;
 }
-
-nav .searchInput button {
+nav .searchInput button{
     border: 0;
     border-radius: 50%;
     background: none;
-
+    
 }
-
-nav .searchInput button img:hover {
+nav .searchInput button img:hover{
     filter: brightness(.8);
     background-color: rgba(0, 0, 0, 0.1);
+    cursor:pointer;
+
 
 }
-
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-    display: none;
-}
-
+input[type="search"]::-webkit-search-results-decoration{ display: none; } 
 /* Removes the X from the search bar */
 
 
-
-
-
-
-
-/*main image*/
-
-section .image img {
-    margin: -10px 0px;
-    padding: 0;
+div.mainContainer{
+    position: relative;
+    z-index: 2;
+    background-image: url("../images/Main.png");
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     height: 100vh;
-    object-fit: cover;
-    z-index: 1;
+}
+#welcome ,#etours{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 4rem;
 }
 
-section .welcome p {
-    color: var(--textcolor);
-    z-index: 2;
-    font-family: 'Cairo', sans-serif;
-    font-family: 'Jomhuria', serif;
-    font-family: 'Kalam', cursive;
-    font-size: 3.5rem;
-    width: 450px;
-    padding-top: 15px;
-    border-top-left-radius: 70px;
-    border-bottom-right-radius: 70px;
-    border: 10px inset #fff;
-    position: absolute;
-    top: 10%;
-    left: 3%;
-    height: 200px;
+div.mainContainer .blurDiv1{
+    position: relative;
+    top: 20%;
+    width: 500px;
     text-align: center;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
-    background-color: rgb(0 0 0/0.2);
-    font-weight: bold;
-
+    font-size: 2.5rem;
+    background-color:rgba(0, 0, 0, 0.3);
+    backdrop-filter:blur(10px) ;
 }
-
-section .paragraph p {
-    color: var(--textcolor);
+div.mainContainer .blurDiv2{
+    position: absolute; 
+    bottom: 0;
     width: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.30);
-    background-color: rgb(0 0 0/0.2);
-    position: absolute;
-    top: 80%;
-    width: 100%;
-    padding: 15px 30px;
-    height: 196px;
+    text-align: left;
     font-size: 1.2rem;
+    background-color:rgba(0, 0, 0, 0.3);
+    backdrop-filter:blur(10px) ;
+    padding: 30px 70px;
+    display: block;
 }
-
-section .paragraph input {
-    color: var(--textcolor);
-    background-color: rgb(68 154 233);
+div.mainContainer .blurDiv2 button{
+    padding: 15px 30px;
+    font-size: 1.5rem;
+    font-family: var(--mainFont);
+    margin-top: 15px;
     border: none;
-    text-align: center;
-    padding: 10px;
-    width: 97px;
-    position: absolute;
-    top: 107%;
-    left: 2%;
-}
+    color: white;
+    background-color: var(--mainColor);
+    transition: .2s ease-in-out;
 
-section .paragraph input:hover {
-    background-color: rgb(23, 23, 238);
 
 }
+div.mainContainer .blurDiv2 button:hover{
+    cursor:pointer;
+    filter: brightness(1.1);
+}
 
 
-
-/*body section*/
-section {
+/* khaled css part */
+section{
     width: 100%;
-    height: 150vh;
+    height: 175vh;
+    /* edit */
     position: relative;
     padding-top: 30px;
     padding-bottom: 30px;
 
 }
 
+.sectionContainer{ 
+    padding: 50px 0px;
+}
+/* add */
 
-section::before {
+section::before{
     content: '';
     position: absolute;
     left: 0;
@@ -227,10 +201,10 @@ section::before {
     width: 100%;
     height: 100%;
     z-index: -3000;
-    background-image: url("/images/E-tours\ Pattern.png");
-    background-size: cover;
+    background-image: url("../images/E-tours\ Pattern.png");
+    background-size:cover;
     background-repeat: repeat-y;
-    opacity: .05;
+    opacity: .08;
 }
 
 /*box*/
@@ -244,38 +218,41 @@ section .box {
 }
 
 
-section .box:nth-child(2) {
+section .box:nth-child(2){
     flex-direction: row-reverse;
 
 }
 
 /*info box*/
-section .box .info {
-    max-width: 50%;
+section .box .info{
+    max-width: 40%; 
+    /* edit */
 }
 
-section .box .info h2 {
+section .box .info h2{
     color: var(--secColor);
-    font-size: 40px;
+    font-size: 3rem;
+    /* edit */
 
 }
 
 
-section .box .info p {
+section .box .info p{
     color: var(--mainColor);
-    font-size: 20px;
+    font-size: 1.5rem;
+    /* edit */
 }
 
 
 /*image container*/
-section .box .image-container {
+section .box .image-container{
     width: 40%;
     background-color: #EEEE;
     position: relative;
 }
 
 
-section .box .image-container img {
+section .box .image-container img{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -284,7 +261,7 @@ section .box .image-container img {
 
 
 /*before and after*/
-section .box .image-container::before {
+section .box .image-container::before{
     content: "";
     background-color: var(--mainColor);
     width: 100%;
@@ -296,7 +273,7 @@ section .box .image-container::before {
 }
 
 
-section .box .image-container::after {
+section .box .image-container::after{
     content: "";
     background-color: var(--secColor);
     width: 100%;
@@ -309,16 +286,17 @@ section .box .image-container::after {
 
 
 /*button*/
-section .button-container {
+section .button-container{
     width: 100%;
-    height: 3em;
+    height: 60px;
+    /* edit */
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
 }
 
-section .button-container::after {
+section .button-container::after{
     content: '';
     background-color: var(--secColor);
     width: calc(10% + 40px);
@@ -329,7 +307,7 @@ section .button-container::after {
     z-index: -1;
 }
 
-section .button-container button {
+section .button-container button{
     width: 10%;
     font-size: 25px;
     padding: 15px;
@@ -339,74 +317,80 @@ section .button-container button {
     transition: .2s;
 }
 
-section .button-container button:hover {
-    cursor: pointer;
+section .button-container button:hover{
+    cursor:pointer;
+    transform: scale(1.1);
+    filter: brightness(1.09);
+    /* edit */
 }
 
-section .button-container button:active {
+/* Toaa */
+
+section .button-container button:active{
     transform: scale(.96);
 
 }
-
-
-
-
-
-/* Footer Code */
-* {
-    margin: 0;
-    padding: 0;
-}
-
-footer {
+footer{
     margin: 10px 0 0 0;
     background-color: #E2C693;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     padding: 40px 0;
-    color: var(--mainColor);
+    color: rgb(39, 39, 39);
+    
 
 }
-
-h4 {
+footer h4{
     color: #000000;
+    font-size: 1.5rem;
 }
-
-ul {
+footer ul{
     list-style: none;
+    
 }
-
-a {
+footer a{
     text-decoration: none;
-    color: var(--mainColor);
+    color: rgb(39, 39, 39);
 }
 
-
-li {
+footer li{
     line-height: 0.60cm;
+    font-size: 1.2rem;
+    transition: .2s 
 }
-
-.copy {
+footer li img{
+    transition: .2s;
+}
+footer li img:hover{
+    filter: drop-shadow(2px 2px 2px);
+}
+.copy{
     width: 100%;
     text-align: center;
     padding-top: 10px;
     color: #000000;
+    margin-bottom: 4px;
 }
-
-.comp1 {
-    line-height: 0.60cm;
+footer .comp1{
+    line-height: .8cm;
+    font-size: 1.2rem;
 }
-
-.comp2 ul li {
+footer .comp2 ul li{
     margin-bottom: 5px;
+    transition: .2s;
+}
+footer .comp2 ul li a:hover{
+    color: #000000;
 }
 
-.comp3 ul li {
+footer .comp3 ul li{
     margin-bottom: 7px;
 }
-
-.social ul li {
-    display: inline-block;
-    margin-bottom: 20px;
+footer .social ul li{
+   display: inline-block;
+   margin-bottom: 20px;
 }
+
+
+
