--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -62,21 +62,22 @@ header {
     position: relative;
     width: 100%;
     margin: 20px 0px;
+    padding: 0 50px;
 }
 
 header div.HeaderBar li {
     list-style: none;
     display: inline;
     margin: 0 25px;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     position: relative;
 }
 
 header li {
     list-style: none;
     display: inline;
-    margin: 0 10px;
-    font-size: 1.7rem;
+    margin: 0 5px;
+    font-size: 1.4rem;
     position: relative;
 }
 
@@ -89,6 +90,7 @@ header div.HeaderBar li.e::before {
     left: 50%;
     bottom: 0;
     background: var(--mainColor);
+    margin-bottom: -5px;
     transition: width 0.2s ease-in-out, left 0.2s ease-in-out;
 }
 
@@ -129,14 +131,14 @@ header div.HeaderBar li.e a {
 }
 
 header img.logo {
-    width: 210px;
+    width: 160px;
 
 }
 
 header .searchInput {
     /* this is the container where to put the search bar and search image */
     width: 100%;
-    max-width: 330px;
+    width: 330px;
     max-height: 50px;
     color: var(--mainColor);
     border: 3px solid var(--mainColor);
@@ -145,8 +147,8 @@ header .searchInput {
     border-radius: 50px;
     padding: 10px;
     color: var(--mainColor);
+    transition: .2s ease-in-out;
 }
-
 header .searchInput input {
     background: transparent;
     flex: 1;
@@ -156,6 +158,7 @@ header .searchInput input {
     font-size: 1.3rem;
     color: black;
     padding-left: 10px;
+    transition: .2s ease-in-out;
 }
 
 header input::placeholder {
@@ -163,18 +166,12 @@ header input::placeholder {
     font-size: 1.3rem;
     padding-left: 5px;
     opacity: 0.5;
-
-
 }
-
-header input::active {
-    border: none;
-}
-
 header .searchInput button img {
     width: 40px;
     border-radius: 40px;
     transition: .2s ease-in-out;
+    margin-right: 5px;
 }
 
 header .searchInput button {
@@ -244,7 +241,7 @@ input[type="search"]::-webkit-search-results-decoration {
     top: 0;
     left: 0;
 
-    background-image: url("../images/section1-img1.png");
+    background-image: url("../images/section1-img.png");
     background-repeat: no-repeat;
     background-size: cover;
     /*center background in div*/
@@ -854,13 +851,22 @@ input[type="search"]::-webkit-search-results-decoration {
     height: 20em;
     margin: 3em auto 1.5em;
     border-radius: 2em;
-
-    background-color: red;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+.section5::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    top: 0;
+    left: 0;
+    background-image: url(../images/sec5-img2.png);
+    border-radius: 2em;
 }
 
 /*background img in before*/
